# ttype

./: Cargo.toml  README.md
src/: input.rs  main.rs  prompt.rs  stats.rs  ui.rs
