[package]
name = "ttype-app"
version = "0.2.0"
description = "Console typing test"
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
rand = "0.8.5"
crossbeam-queue = "0.3.6"
anyhow = "1"
textwrap = "0.16"
